# python-scaffold-template

./: .gitignore  README.md  pyproject.toml
configs/: asgi.py  settings.py  urls.py  wsgi.py
src/: main.py
src/controller/: welcome_controller.py
src/enums/: err_code.py
src/service/: welcome_service.py
src/utils/: biz_error_utils.py  response_utils.py
